# double_pendulum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_raylib.sh  double_pendulum.html
docs/: double_pendulum.wasm  index.html  script.js  style.css
src/: main.c
web/: double_pendulum.js  double_pendulum.wasm
